# vlm_quantization

./: .env.sample  .gitignore  colab_demo.ipynb  colab_launch.ipynb  colab_train.ipynb  eval.py  optuna_search.py  pyproject.toml  requirements.txt  train.py
configs/: colab.yaml  colab_multilingual.yaml  default.yaml  dgx_spark.yaml
monitor/: callback.py
monitor/frontend/: package-lock.json
monitor/frontend/app/: globals.css  layout.tsx  page.tsx
monitor/frontend/app/augmentation/: page.tsx
monitor/frontend/app/hash-analysis/: page.tsx
monitor/frontend/app/inference/: page.tsx
monitor/frontend/app/optuna/: page.tsx
monitor/frontend/app/search/: page.tsx
monitor/frontend/components/: BackboneComparison.tsx  BitBalanceChart.tsx  CheckpointPanel.tsx  EpochNavigator.tsx  HashQuality.tsx  LossChart.tsx  MetricsChart.tsx  RunSelector.tsx  SampleGallery.tsx  SimilarityHeatmap.tsx  SystemPanel.tsx  TrainingStatus.tsx
monitor/frontend/components/inference/: HashBitmap.tsx  HashComparison.tsx  InputPanel.tsx
monitor/frontend/contexts/: RunContext.tsx
monitor/frontend/hooks/: useWebSocket.ts
monitor/frontend/lib/: types.ts
monitor/server/: app.py  database.py  inference.py  models.py  optuna_api.py  search_index.py  system_monitor.py
scripts/: build_index.py  monitor.sh  optuna_dgx_spark.sh  prepare_datasets.py  setup_dgx_spark.sh  train_dgx_spark.sh
src/data/: coco.py  datamodule.py  generic.py  karpathy.py  transforms.py
src/losses/: balance.py  combined.py  contrastive.py  distillation.py  eaql.py  lcs.py  ortho_hash.py  quantization.py  supervised.py
src/models/: cross_modal_hash.py  hash_layer.py  nested_hash_layer.py
src/utils/: gpu_config.py  hamming.py  metrics.py
