[project]
name = "vlm-quantization"
version = "0.1.0"
description = "Cross-modal deep hashing with SigLIP2"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pytorch-lightning>=2.1.0",
    "transformers>=4.49.0",
    "albumentations>=1.3.0",
    "pycocotools>=2.0.7",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "scipy>=1.11.0",
    "tqdm>=4.65.0",
    # Hyperparameter Optimization
    "optuna>=3.5.0",
    # Monitoring
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
    "aiosqlite>=0.20.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    # Pinned to force PyPI resolution — PyTorch cu128 index only ships cp313 wheels
    "markupsafe>=3.0.2",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true  # ONLY torch/torchvision use this index; everything else from PyPI

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]
