[project]
name = "vlm-quantization"
version = "0.1.0"
description = "Cross-modal deep hashing with SigLIP2"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pytorch-lightning>=2.1.0",
    "transformers>=4.49.0",
    "albumentations>=1.3.0",
    "pycocotools>=2.0.7",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "scipy>=1.11.0",
    "tqdm>=4.65.0",
    # Hyperparameter Optimization
    "optuna>=3.5.0",
    # Monitoring
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
    "nvidia-ml-py>=12.0.0",
    "aiosqlite>=0.20.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "markupsafe>=3.0.2",
]

# PyTorch CUDA indexes — platform-specific for correct GPU support:
#   aarch64 (DGX Spark, CUDA 13.0) → cu130
#   x86_64  (Colab, cloud GPU)     → cu126
#   macOS   (local dev)            → PyPI default (CPU)
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
    { index = "pytorch-cu126", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
